# omoknuni_small

./: ALPHAZERO_TRAINING_GUIDE.md  ATTACK_DEFENSE_IMPLEMENTATION.md  CHECKPOINT_USAGE_GUIDE.md  CLAUDE.md  CMakeLists.txt  COMPILATION_SUMMARY.md  DDW_RANDWIRE_USAGE.md  DEBUG_LOG_REMOVAL_SUMMARY.md  EVALUATION_IMPLEMENTATION.md  GPU_OPTIMIZATION_SUMMARY.md  HYBRID_MCTS_OPTIMIZATION_PLAN.md  MCTS_OPTIMIZATION_PLAN.md  MCTS_SCRIPTS_README.md  MCTS_guide.md  OPTIMIZATIONS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS_SUMMARY.md  README.md  SHUTDOWN_FIX_SUMMARY.md  SIGNAL_HANDLING_IMPROVEMENTS.md  STREAMLINING_SUMMARY.md  alphazero_evaluate.py  alphazero_train.py  analyze_performance.py  app_flow_document.md  app_flowchart.md  attack_defense_plane.md  benchmark_mcts.sh  build_enhanced.sh  build_optimized.sh  build_simple_enhanced.sh  check_model_type.py  cleanup.sh  cleanup_debug.sh  config.yaml  config_alphazero_train.yaml  config_ddw_balanced.yaml  config_ddw_randwire_aggressive.yaml  config_ddw_randwire_optimized.yaml  config_ddw_test.yaml  (+115 more)
backup_overengineered_components/: adaptive_batch_sizer.cpp  batch_barrier.h  burst_batch_collector.cpp  burst_batch_collector.h  burst_coordinator.cpp  concurrent_request_aggregator.cpp  cuda_stream_optimizer.h  dynamic_batch_adjuster.cpp  lock_free_batch_accumulator.cpp  lock_free_batch_accumulator.h  mcts_engine_optimized_v2.cpp  optimized_external_queue_processor.h  unified_inference_server.cpp
backups/test-files/: burst_coordinator_test.cpp
backups/unused_files_backup_20250527_075257/: REMOVED_FILES_LOG.txt
backups/unused_mcts_engines/: advanced_memory_pool.cpp  advanced_memory_pool.h  advanced_transposition_table.cpp  advanced_transposition_table.h  aggressive_memory_manager.cpp  aggressive_memory_manager.h  dynamic_batch_adjuster.h  dynamic_batch_manager.h  enhanced_mcts_engine.cpp  enhanced_mcts_engine.h  mcts_engine_batch_selection.cpp  mcts_engine_taskflow_optimized.cpp  mcts_engine_ultra_fast_batch.cpp  mcts_node_fast.cpp
data/self_play_games/: game_20250525_210943_0.json  game_20250525_211000_1.json  game_20250525_211026_2.json  game_20250525_211030_3.json  game_20250525_211143_4.json  game_20250525_211210_5.json  game_20250525_211232_6.json  game_20250525_211240_7.json  game_20250528_171820_0.json  game_20250530_153831_0.json  game_20250530_153840_1.json  game_20250530_153842_2.json  game_20250530_153910_3.json  game_20250530_153921_4.json  game_20250530_153930_5.json  game_20250530_153952_6.json  game_20250530_154021_7.json  game_20250530_154030_8.json  game_20250530_154030_9.json  game_20250530_154052_10.json  game_20250530_154111_11.json  game_20250530_154120_12.json  game_20250530_154130_13.json  game_20250530_154141_14.json  game_20250530_154202_15.json  game_20250530_154221_16.json  game_20250530_154241_17.json  game_20250530_154242_18.json  game_20250530_154252_19.json  game_20250530_154301_20.json  game_20250530_154332_21.json  game_20250530_154341_22.json  game_20250530_154342_23.json  game_20250530_154401_24.json  game_20250530_154432_25.json  game_20250530_154441_26.json  game_20250530_154441_27.json  game_20250530_154442_28.json  game_20250530_154532_29.json  game_20250530_154541_30.json  (+53 more)
docs/: attack_defense_plane.md  backend_structure_document.md  capsnet.md  frontend_guidelines_document.md  go_fix.md  go_korean.md  gpu_mcts.md  mcts_architecture.md  mcts_node_pool_usage.md  new_nn.md  package_recommendations.md  project_requirements_document.md
include/: alphazero_export.h  alphazero_export.h.in  cudnn.h
include/cli/: alphazero_pipeline.h  cli_manager.h
include/core/: export_macros.h  game_export.h  igamestate.h  lock_free_tensor_pool.h  tensor_pool.h
include/evaluation/: arena.h  model_evaluator.h
include/mcts/: advanced_transposition_table.h  aggressive_memory_manager.h  batch_accumulator.h  concurrent_pipeline_buffer.h  concurrent_request_aggregator.h  cuda_graph_capture.h  dynamic_batch_manager.h  enhanced_mcts_engine.h  evaluation_types.h  gpu_batch_evaluator.h  gpu_enhanced_mcts_engine.h  gpu_kernels.h  gpu_mcts_engine.h  gpu_memory_pool.h  gpu_node.h  gpu_tree_storage.h  gpu_virtual_loss.h  gpu_vram_monitor.h  half_precision_utils.h  mcts_engine.h  mcts_evaluator.h  mcts_node.h  mcts_node_pool.h  mcts_object_pool.h  mcts_taskflow_engine.h  memory_pressure_monitor.h  multi_instance_nn_manager.h  node_tracker.h  phmap_transposition_table.h  prioritized_concurrent_queue.h  shared_eval_wrapper.h  shared_evaluation_server.h  shared_inference_queue.h  transposition_table.h  unified_inference_server.h  unified_memory_manager.h
include/nn/: ddw_randwire_resnet.h  gpu_optimizer.h  neural_network.h  neural_network_factory.h  optimized_resnet_model.h  resnet_model.h
include/selfplay/: gpu_self_play_manager.h  optimized_self_play_manager.h  parallel_self_play_manager.h  self_play_manager.h  unified_parallel_manager.h
include/training/: data_loader.h  dataset.h  training_data_manager.h
include/utils/: advanced_memory_monitor.h  attack_defense_module.h  cuda_utils.h  debug_logger.h  debug_monitor.h  gamestate_pool.h  gpu_attack_defense_module.h  gpu_memory_manager.h  hash_specializations.h  logger.h  memory_allocator.h  memory_debug.h  memory_tracker.h  performance_profiler.h  profiler.h  progress_bar.h  progress_bar_debug.h  progress_bar_fixed.h  resource_monitor.h  safe_async_logger.h  shutdown_manager.h  thread_local_allocator.h  thread_local_memory_manager.h  zobrist_hash.h
python/: alphazero_main.py
python/alphazero/: __init__.py  alphazero_trainer.py  arena.py  core.py  elo_system.py
python/examples/: alphazero_training.cpp  self_play_libtorch.cpp  train_alphazero.py
src/cli/: cli_manager.cpp  (+11 more)
test_build_notest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AlphaZero.sln  DartConfiguration.tcl  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alphazero.vcxproj  alphazero.vcxproj.filters  cmake_install.cmake
tests/: core_tests_main.cpp  test_ddw_minimal.cpp  test_ddw_randwire_resnet.cpp  test_gpu_attack_defense.cpp  test_main.h
(+188 files in other folders)
